2020-04-21  Jeff Chapman II  <jchapman@lock3software.com>

	* cxx-contracts.c (get_contract_role): Fix style.

2020-04-12  Jeff Chapman II  <jchapman@lock3software.com>

	* cxx-contracts.h (contract_semantic): Remove CCS_ALWAYS.
	(contract_continuation): Remove ALWAYS_CONTINUE.
	* cxx-contracts.c (valid_configs): Remove CCS_ALWAYS values.
	(lookup_concrete_semantic): Remove CCS_ALWAYS cases.
	(setup_default_contract_role): Remove CCS_ALWAYS from default %review
	role.
	(map_contract_semantic): Remove CCS_ALWAYS case.

2020-04-06  Jeff Chapman II  <jchapman@lock3software.com>

	* c-common.c: Remove old debugging include.
	* c-opts.c: Rename contract.h to cxx-contracts.h.
	* contract.c: Rename to:
	* cxx-contracts.c: Add copyright block; fix include.
	* contract.h: Rename to:
	* cxx-contracts.h: Fix copyright block.

2020-03-25  Jeff Chapman II  <jchapman@lock3software.com>

	* contract.h (cxx23_contract_attribute_p): Make global extern.

2020-03-23  Jakub Jelinek  <jakub@redhat.com>

	PR c++/91993
	* c-warn.c (warnings_for_convert_and_check): For expr and/or
	result being COMPOUND_EXPRs, skip to ultimate rhs.

2020-03-20  Richard Sandiford  <richard.sandiford@arm.com>

	PR middle-end/94072
	* c-common.c (c_common_type_for_mode): Before using a registered
	built-in type, check that the vectorness of the type matches
	the vectorness of the mode.

2020-03-17  Jeff Chapman II  <jchapman@lock3software.com>

	* contract.h: Remove cpp_ prefixes.
	* contract.c: Ditto.
	* c-opts.c: Ditto.

	* contract.h (contract_mode): Rewrite in terms of constructors instead
	of setters.
	(map_contract_semantic): New.
	(map_contract_level): New.
	* contract.c (+map_contract_semantic): New. Map a soure level contract
	semantic to a contract_semantic enum.
	(map_contract_level): New. Map a source level contract level to a
	contract_level enum.

2020-03-17  Jakub Jelinek  <jakub@redhat.com>

	* c-common.c (resolve_overloaded_builtin): Fix up duplicated word
	issue in a diagnostic message.
