@@ -41,7 +41,7 @@ void
 validate_contract_role (contract_role *role)
 {
   gcc_assert (role);
-  if (!unchecked_contract_p(role->axiom_semantic))
+  if (!unchecked_contract_p (role->axiom_semantic))
     error ("axiom contract semantic must be %<assume%> or %<ignore%>");
 
   if (!valid_configs[role->default_semantic][role->audit_semantic] )
@@ -50,7 +50,7 @@ validate_contract_role (contract_role *role)
 }
 
 contract_semantic
-lookup_concrete_semantic (char *name)
+lookup_concrete_semantic (const char *name)
 {
   if (strcmp (name, "ignore") == 0)
     return CCS_IGNORE;
@@ -67,17 +67,37 @@ lookup_concrete_semantic (char *name)
   return CCS_INVALID;
 }
 
+/* Compare role and name up to either the NUL terminator or the first
+   occurrence of colon.  */
+
+static bool
+role_name_equal (const char *role, const char *name)
+{
+  size_t role_len = strchrnul (role, ':') - role;
+  size_t name_len = strchrnul (name, ':') - name;
+  if (role_len != name_len)
+    return false;
+  return strncmp (role, name, role_len) == 0;
+}
+
+static bool
+role_name_equal (contract_role *role, const char *name)
+{
+  if (role->name == NULL)
+    return false;
+  return role_name_equal (role->name, name);
+}
+
 contract_role *
 get_contract_role (const char *name)
 {
   for (int i = 0; i < max_custom_roles; ++i)
     {
-      contract_role potential = contract_build_roles[i];
-      if (potential.name == NULL) continue;
-      if (strcmp (potential.name, name) != 0) continue;
-      return contract_build_roles + i;
+      contract_role *potential = contract_build_roles + i;
+      if (role_name_equal (potential, name))
+	return potential;
     }
-  if (strcmp (name, "default") == 0 || strcmp (name, "review") == 0)
+  if (role_name_equal (name, "default") || role_name_equal (name, "review"))
     {
       setup_default_contract_role (false);
       return get_contract_role (name);
@@ -94,24 +114,28 @@ add_contract_role (const char *name,
 {
   for (int i = 0; i < max_custom_roles; ++i)
     {
-      if (contract_build_roles[i].name != NULL
-	  && strcmp (contract_build_roles[i].name, name) != 0)
+      contract_role *potential = contract_build_roles + i;
+      if (potential->name != NULL
+	  && !role_name_equal (potential, name))
 	continue;
-      if (contract_build_roles[i].name != NULL && !update)
-	return contract_build_roles + i;
-      contract_build_roles[i].name = name;
-      contract_build_roles[i].default_semantic = des;
-      contract_build_roles[i].audit_semantic = aus;
-      contract_build_roles[i].axiom_semantic = axs;
-      return contract_build_roles + i;
+      if (potential->name != NULL && !update)
+	return potential;
+      potential->name = name;
+      potential->default_semantic = des;
+      potential->audit_semantic = aus;
+      potential->axiom_semantic = axs;
+      return potential;
     }
   return NULL;
 }
 
 enum contract_build_level { OFF, DEFAULT, AUDIT };
-extern bool flag_contract_continuation_mode;
-extern bool flag_contract_assumption_mode;
-extern int flag_contract_build_level;
+static bool flag_contract_continuation_mode = false;
+static bool flag_contract_assumption_mode = true;
+static int flag_contract_build_level = DEFAULT;
+
+static bool contracts_p1332_default = false, contracts_p1332_review = false,
+  contracts_std = false, contracts_p1429 = false;
 
 static contract_semantic
 get_concrete_check ()
@@ -131,20 +155,20 @@ setup_default_contract_role (bool update)
   contract_semantic check = get_concrete_check ();
   contract_semantic axiom = get_concrete_axiom_semantic ();
   switch (flag_contract_build_level)
-  {
-    case OFF:
-      add_contract_role ("default", CCS_IGNORE, CCS_IGNORE, axiom, update);
-      add_contract_role ("review", CCS_IGNORE, CCS_IGNORE, CCS_IGNORE, update);
-      break;
-    case DEFAULT:
-      add_contract_role ("default", check, CCS_IGNORE, axiom, update);
-      add_contract_role ("review", check, CCS_IGNORE, CCS_IGNORE, update);
-      break;
-    case AUDIT:
-      add_contract_role ("default", check, check, axiom, update);
-      add_contract_role ("review", check, check, CCS_IGNORE, update);
-      break;
-  }
+    {
+      case OFF:
+	add_contract_role ("default", CCS_IGNORE, CCS_IGNORE, axiom, update);
+	add_contract_role ("review", CCS_IGNORE, CCS_IGNORE, CCS_IGNORE, update);
+	break;
+      case DEFAULT:
+	add_contract_role ("default", check, CCS_IGNORE, axiom, update);
+	add_contract_role ("review", check, CCS_IGNORE, CCS_IGNORE, update);
+	break;
+      case AUDIT:
+	add_contract_role ("default", check, check, axiom, update);
+	add_contract_role ("review", check, check, CCS_IGNORE, update);
+	break;
+    }
 }
 
 contract_semantic
@@ -171,5 +195,177 @@ map_contract_level (const char *ident)
   else if (strcmp (ident, "axiom") == 0)
     return CONTRACT_AXIOM;
   return CONTRACT_INVALID;
+}
+
+
+void
+handle_OPT_fcontract_build_level_ (const char *arg)
+{
+  if (contracts_p1332_default || contracts_p1332_review || contracts_p1429)
+    {
+      error ("-fcontract-build-level= cannot be mixed with p1332/p1429");
+      return;
+    }
+  else
+    contracts_std = true;
+
+  if (strcmp (arg, "off") == 0)
+    flag_contract_build_level = OFF;
+  else if (strcmp (arg, "default") == 0)
+    flag_contract_build_level = DEFAULT;
+  else if (strcmp (arg, "audit") == 0)
+    flag_contract_build_level = AUDIT;
+  else
+    error ("-fcontract-build-level= must be off|default|audit");
+
+  setup_default_contract_role ();
+}
+
+void
+handle_OPT_fcontract_assumption_mode_ (const char *arg)
+{
+  if (contracts_p1332_default || contracts_p1332_review || contracts_p1429)
+    {
+      error ("-fcontract-assumption-mode= cannot be mixed with p1332/p1429");
+      return;
+    }
+  else
+    contracts_std = true;
+
+  if (strcmp (arg, "on") == 0)
+    flag_contract_assumption_mode = true;
+  else if (strcmp (arg, "off") == 0)
+    flag_contract_assumption_mode = false;
+  else
+    error ("-fcontract-assumption-mode= must be %<on%> or %<off%>");
+
+  setup_default_contract_role ();
+}
+
+void
+handle_OPT_fcontract_continuation_mode_ (const char *arg)
+{
+  if (contracts_p1332_default || contracts_p1332_review || contracts_p1429)
+    {
+      error ("-fcontract-continuation-mode= cannot be mixed with p1332/p1429");
+      return;
+    }
+  else
+    contracts_std = true;
+
+  if (strcmp (arg, "on") == 0)
+    flag_contract_continuation_mode = true;
+  else if (strcmp (arg, "off") == 0)
+    flag_contract_continuation_mode = false;
+  else
+    error ("-fcontract-continuation-mode= must be %<on%> or %<off%>");
+
+  setup_default_contract_role ();
+}
+
+void
+handle_OPT_fcontract_role_ (const char *arg)
+{
+  const char *name = arg;
+  const char *vals = strchr (name, ':');
+  if (vals == NULL)
+    {
+      error ("-fcontract-role= must be in the form role:semantics");
+      return;
+    }
+
+  contract_semantic dess = CCS_INVALID, auss = CCS_INVALID, axss = CCS_INVALID;
+  char *des = NULL, *aus = NULL, *axs = NULL;
+  des = xstrdup (vals + 1);
+
+  aus = strchr (des, ',');
+  if (aus == NULL)
+    {
+      error ("-fcontract-role= semantics must include default,audit,axiom values");
+      goto validate;
+    }
+  *aus = '\0'; // null terminate des
+  aus = aus + 1; // move past null
+
+  axs = strchr (aus, ',');
+  if (axs == NULL)
+    {
+      error ("-fcontract-role= semantics must include default,audit,axiom values");
+      goto validate;
+    }
+  *axs = '\0'; // null terminate aus
+  axs = axs + 1; // move past null
+
+  dess = lookup_concrete_semantic (des);
+  auss = lookup_concrete_semantic (aus);
+  axss = lookup_concrete_semantic (axs);
+validate:
+  free (des);
+  if (dess == CCS_INVALID || auss == CCS_INVALID || axss == CCS_INVALID)
+    return;
+
+  bool is_defalult_role = role_name_equal (name, "default");
+  bool is_review_role = role_name_equal (name, "review");
+  bool is_std_role = is_defalult_role || is_review_role;
+  if ((contracts_std && is_std_role) || (contracts_p1429 && is_defalult_role))
+    {
+      error ("-fcontract-role= cannot be mixed with std/p1429 contract flags");
+      return;
+    }
+  else if (is_std_role)
+    {
+      contracts_p1332_default |= is_defalult_role;
+      contracts_p1332_review |= is_review_role;
+    }
+
+  contract_role *role = add_contract_role (name, dess, auss, axss);
+
+  if (role == NULL)
+    {
+      // TODO: not enough space?
+      error ("-fcontract-level= too many custom roles");
+      return;
+    }
+  else
+    validate_contract_role (role);
+}
+
+void
+handle_OPT_fcontract_semantic_ (const char *arg)
+{
+  if (!strchr (arg, ':'))
+    {
+      error ("-fcontract-semantic= must be in the form level:semantic");
+      return;
+    }
+
+  if (contracts_std || contracts_p1332_default)
+    {
+      error ("-fcontract-semantic= cannot be mixed with std/p1332 contract flags");
+      return;
+    }
+  contracts_p1429 = true;
+
+  contract_role *role = get_contract_role ("default");
+  if (!role)
+    {
+      error ("-fcontract-semantic= cannot find default role");
+      return;
+    }
+
+  const char *semantic = strchr (arg, ':') + 1;
+  contract_semantic sem = lookup_concrete_semantic (semantic);
+  if (sem == CCS_INVALID)
+    return;
+
+  if (strncmp ("default:", arg, 8) == 0)
+    role->default_semantic = sem;
+  else if (strncmp ("audit:", arg, 6) == 0)
+    role->audit_semantic = sem;
+  else if (strncmp ("axiom:", arg, 6) == 0)
+    role->axiom_semantic = sem;
+  else
+    error ("-fcontract-semantic= level must be default, audit, or axiom");
+  validate_contract_role (role);
 }
 
